<resources>
    <string name="app_name">Simple dictionary</string>
    <string name="start_message">Данный словарь позволяет вносить английские слова и их перевод,
    просматривать все внесенные слова (и перевод) списком, поочередно просматривать все слова с переводом для запоминания,
    искать в словаре слово (как на русском, так и английском)</string>

    <string name="title_home">Home</string>
    <string name="title_activity_redact">RedactActivity</string>


    <string name="add_word">Добавить слово</string>
    <string name="redact">Редактировать</string>
    <string name="empty_pole">Заполните все поля!</string>
    <string name="del_all">Удалить все слова из словаря</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="list">List</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="question_del_all">Вы дейcтвительно хотите удалить все слова из словаря?</string>
    <string name="question_remember_all">Вы дейcтвительно хотите добавить все слова в карточки?</string>
    <string name="next">Следующее</string>
    <string name="total_words">Слов в словаре: %s</string>
    <string name="total_card">Карточек: %s</string>
    <string name="empty_ru">пустой</string>
    <string name="empty_en">empty</string>
    <string name="remain_words">Осталось слов</string>
    <string name="all_words">Всего слов в словаре:</string>
    <string name="remember">Запомнено</string>
    <string name="empty_field">Заполните все поля!</string>
    <string name="card">Карточек:</string>
    <string name="add_card">Добавить в карточки</string>
    <string name="del_card">Удалить из карточек</string>
    <string name="del_from_dictionary">Удалить из словаря</string>
    <string name="found_words">Найдено слов: %s</string>
    <string name="again">Заново</string>
    <string name="english_word">english word</string>
    <string name="russian_word">русское слово</string>
    <string name="search_rus">Искать</string>
    <string name="add_all_words">Добавить все слова в карточки</string>
</resources>