<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".start.StartFragment">
    <data>
        <variable
            name="StartViewModel"
            type="com.example.youwords.start.StartViewModel" />
        <variable
            name="startFragment"
            type="com.example.youwords.start.StartFragment" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/ru_text"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@{StartViewModel.ruText.toString()}"
            app:layout_constraintBottom_toTopOf="@+id/button_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_reset"
            app:layout_constraintVertical_bias="0.631"
            tools:text="Русское слово" />

        <TextView
            android:id="@+id/en_text"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@{StartViewModel.enText.toString()}"
            app:layout_constraintBottom_toTopOf="@+id/button_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_reset"
            app:layout_constraintVertical_bias="0.292"
            tools:text="english" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="@{StartViewModel.enabledNext}"
            android:onClick="@{() ->startFragment.clickNext()}"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/count_read"
            style="@style/Widget.TipTime.TextView"
            android:textColor="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@{StartViewModel.size_read.toString()}"
            app:layout_constraintStart_toEndOf="@+id/textView_w1"
            app:layout_constraintTop_toBottomOf="@+id/text_count_card"
            tools:text="100" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:enabled="@{StartViewModel.enabledReset}"
            android:onClick="@{() ->startFragment.clickReset()}"
            android:text="@string/again"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textRemain" />

        <TextView
            android:id="@+id/textRemain"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="60dp"
            android:layout_marginTop="16dp"
            android:text="@string/remain_words"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_w2" />

        <TextView
            android:id="@+id/textView_w1"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/all_words"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_w2"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="16dp"
            android:text="@string/card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_w1" />

        <TextView
            android:id="@+id/text_total"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@{StartViewModel.size_all.toString()}"
            app:layout_constraintStart_toEndOf="@+id/textView_w1"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="446" />

        <TextView
            android:id="@+id/text_count_card"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@{StartViewModel.countCard.toString()}"
            android:textColor="@color/red"
            app:layout_constraintStart_toEndOf="@+id/textView_w1"
            app:layout_constraintTop_toBottomOf="@+id/text_total"
            tools:text="123" />

        <Button
            android:id="@+id/button_remember"
            android:enabled="@{StartViewModel.enabledRemember}"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:onClick="@{() ->startFragment.clickRemember()}"
            android:text="@string/remember"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/count_read" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>